--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,3 +6,4 @@ en:
         email: "MailAddress"
         password: "Password"
         password_confirmation: "Password confirmation"
+  sitename: "newsdict"
