Added the translate files.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,11 @@
 en:
+  admin:
+    actions:
+      dashboard:
+        title: admin top
+        breadcrumb: admin
+    misc:
+      navigation: menu
   mongoid:
     attributes:
       user:
