Updated the admin views.

--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -1,5 +1,8 @@
 en:
   admin:
+    navigation:
+      setting: Setting
+      global_setting: Global Setting
     js:
       true: True
       false: False
