--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,16 +1,43 @@
 en:
-  admin:
-    actions:
-      dashboard:
-        title: admin top
-        breadcrumb: admin
-    misc:
-      navigation: menu
-  mongoid:
-    attributes:
-      user:
-        username: "User Name"
-        email: "MailAddress"
-        password: "Password"
-        password_confirmation: "Password confirmation"
+  date:
+    abbr_day_names:
+    - Sun
+    - Mon
+    - Tue
+    - Wed
+    - Thu
+    - Fri
+    - Sat
+    abbr_month_names:
+    - Jan
+    - Feb
+    - Mar
+    - Apr
+    - May
+    - Jun
+    - Jul
+    - Aug
+    - Sep
+    - Oct
+    - Nov
+    - Dec
+    day_names:
+    - Sunday
+    - Monday
+    - Tuesday
+    - Wednesday
+    - Thursday
+    - Friday
+    - Saturday
+    formats:
+      default: "%Y-%m-%d"
+      long: "%B %d, %Y"
+      short: "%b %d"
+  time:
+    am: am
+    formats:
+      default: ! '%a, %d %b %Y %H:%M:%S %z'
+      long: ! '%B %d, %Y %H:%M'
+      short: ! '%d %b %H:%M'
+    pm: pm
   sitename: "newsdict"
