--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -11,6 +11,7 @@ ja:
   category: カテゴリー
   content_description: コンテンツ概要
   more_information: 詳細な情報を見る
+  content_title: "%{name}が共有した「%{title}」"
   date:
     abbr_day_names:
     - 日
