--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,5 @@
 en:
+  inquiry: Inquiry
   be_shared_content_list: "List of contents %{name} shared."
   count_of_shared: Count of shared
   shared_at: shared date
