--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -3,6 +3,8 @@ en:
     navigation:
       setting: Setting
       global_setting: Global Setting
+      other_system_admin: Other System Admin
+      inquiries_management: Inquiries Management
     js:
       true: True
       false: False
