--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,7 @@
 en:
   official_site: Official Site
   inquiry: Inquiry
+  sidekiq: Sidekiq
   be_shared_content_list: "List of contents %{name} shared."
   count_of_shared: Count of shared
   shared_at: shared date
