--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,6 +1,7 @@
 ja:
   official_site: オフィシャルサイト
   inquiry: お問い合わせ
+  sidekiq: ジョブ管理
   be_shared_content_list: "%{name}がシェアした記事一覧"
   count_of_shared: シェア重複数
   shared_at: シェア日付
