--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,5 +56,6 @@ en:
       default: ! '%a, %d %b %Y %H:%M:%S %z'
       long: ! '%B %d, %Y %H:%M'
       short: ! '%d %b %H:%M'
+      only_date: ! '%a, %d %b %Y'
     pm: pm
   sitename: "newsdict"
