--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -52,8 +52,11 @@ ja:
       long: "%Y年%m月%d日(%a)"
       short: "%m/%d"
   time:
+    am: 午前
     formats:
       default: "%Y/%m/%d %H:%M:%S"
       long: "%Y年%m月%d日(%a) %H時%M分%S秒 %z"
       short: "%y/%m/%d %H:%M"
+      only_date: "%Y年%m月%d日(%a)"
+    pm: 午後
   sitename: "newsdict"
