--- a/src/doc/index.adoc
+++ b/src/doc/index.adoc
@@ -1,14 +1,12 @@
 :toc: left
+:sectlinks:
+:toc-title: 目次
+
+include::ja/google_translate.adoc[]
 
 == newsdict.io : Correct the conntents from Internet.
 
-image:https://img.shields.io/github/license/newsdict/newsdict.io[License]
-image:https://img.shields.io/github/v/release/newsdict/newsdict.io[Release]
-image:https://img.shields.io/github/v/release/newsdict/asciidoctor.live[asciiDoctor.live]
-image:https://img.shields.io/badge/rails-v6.0.2.2-orange[Rails]
-image:https://img.shields.io/badge/mongoid-7.1.0-yellow[Mongoid]
-image:https://img.shields.io/badge/rails_admin-2.0.1-yellow[RailsAdmin]
-image:https://img.shields.io/badge/yard-0.9.24-yellow[Yard]
+include::../../badges.adoc[]
 
 newsdict.ioはフォロワーがシェアしている記事などのウェブコンテンツを
 クローリングしフィードとして閲覧できるようにします。Railsで作ってあるため拡張が容易です。
@@ -16,13 +14,62 @@ newsdict.ioはフォロワーがシェアしている記事などのウェブコ
 image::/img/newsdictio_image.png[width=80%, align="center"]
 
 == Documents
-=== link:ja/getting_start/[Getting Start]
-=== link:ja/overview/[Overview]
-=== link:ja/setting/[Setting]
-=== link:ja/worker/[Worker]
-=== link:ja/theme/[Theme]
-=== link:ja/api/[Api]
-=== link:ja/document/[Document]
-=== link:ja/admin/[Admin]
-=== link:ja/debug/[Debug]
-=== link:ja/programing_guide/[Programing Guide]
+=== Getting Start
+
+簡単に起動できる方法を紹介します。
+
+-> link:ja/getting_start/[Getting Start]
+
+=== Overview
+
+アプリの構成を紹介しています。
+
+-> link:ja/overview/[Overview]
+
+=== Setting
+
+動作に必要な設定方法を紹介しています。
+
+-> link:ja/setting/[Setting]
+
+=== Worker
+
+定期的なジョブを実行するワーカーについて紹介しています。
+
+-> link:ja/worker/[Worker]
+
+=== Theme
+
+アプリで使用するテーマについて紹介します。
+
+-> link:ja/theme/[Theme]
+
+=== API
+
+APIについて紹介します。
+
+-> link:ja/api/[Api]
+
+=== Document
+
+newsdict.ioのドキュメントシステムについて紹介します。
+
+-> link:ja/document/[Document]
+
+=== Admin
+
+管理画面について紹介します。
+
+-> link:ja/admin/[Admin]
+
+=== Debug
+
+newsdict.ioを使って開発する上でのデバッグ方法について紹介します。
+
+link:ja/debug/[Debug]
+
+=== Programing Guide
+
+newsdict.ioの開発ガイドです。
+
+-> link:ja/programing_guide/[Programing Guide]
