--- a/src/doc/ja/setting.adoc
+++ b/src/doc/ja/setting.adoc
@@ -1,7 +1,73 @@
 :toc: left
+:sectlinks:
+:toc-title: 目次
+
+include::google_translate.adoc[]
 
 = Setting
+[.env]ファイルの設定内容について説明します。
 
-Work In Progress
+== Default Locale
+アプリ言語コードを設定します。
+
+ default_locale=ja
+
+=== Maximum number of admin's members
+管理画面を操作できる最大ユーザ数を設定します。 +
+デフォルトテーマでは、最大ユーザ数に到達するとトップページに管理画面へのリンク[Setting]が出なくなります。
+
+ MAX_MEMBER_COUNT=2
+
+=== super_admin email
+管理者ユーザのメールアドレスを設定します。 +
+このメールアドレスで登録するとすべての管理項目を編集できるようになります。
+
+ ADMIN_USER_EMAIL=dummy@dummy.com
+
+=== redis host and port
+ワーカーにsidekiqを使用しており、storageにはredisを使用しています。
+
+  REDIS_HOST=dummy.com
+  SIDEKIQ_NAMESPACE=sidekiq
+
+=== mongodb host
+メインDBにmongodbを使用しているので適切なホスト名を設定してください。
+
+  MONGODB_HOST=dummy.com
+
+=== webpack-dev-server
+開発環境で使用するwebpackerドメイン名を設定します。
+
+ WEBPACK_DEV_SERVER_PUBLIC=1.2.3.4:3036
+
+=== Logging to STDOUT
+開発環境でログを出力したくない場合は以下をコメントアウトしてください
+
+ RAILS_LOG_TO_STDOUT=1
+
+=== action mailer settings
+ユーザ登録する際に送られるメール設定を行います。 +
+次期リリースで管理画面で変更できるようにする予定です。
+
+ MAILER_SMTP=dummy.com
+ MAILER_PORT=587
+ MAILER_DOMAIN=dummy.com
+ MAILER_USER_NAME=dummy
+ MAILER_PASSWORD=dummy
+ MAILER_AUTHENTICATION=login
+ MAILER_ENABLE_STARTTLS_AUTO=true
+
+=== mailer_sender used by devise
+送信されるメールのfromに記載するメールアドレスを設定します。
+
+ MAILER_SENDER=dummy
+
+=== twitter api keys
+ツイッターのAPI設定を行います。
+
+ TWITTER_CONSUMER_KEY=dummy
+ TWITTER_CONSUMER_SECRET=dummy
+ TWITTER_ACCESS_TOKEN=dummy
+ TWITTER_ACCESS_SECRET=dummy
 
 link:/[Back To The Top]
