Fixed #50. - Refactoring Admin view - How to display on the surface

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,6 +16,8 @@ en:
   content_description: Description
   more_information: More detail
   content_title: "%{name} shared `%{title}`"
+  created_at: Created At
+  updated_at: Updated At
   date:
     abbr_day_names:
     - Sun
