Refactor exclude contents. - Used resources path at routes. - Replace method exclude_domain to exclude_url. - Renew view files.

--- a/config/locales/mongoid.en.yml
+++ b/config/locales/mongoid.en.yml
@@ -28,7 +28,7 @@ en:
         updated_at: updated date
         is_manual_locked: block to login
       "filters/content":
-        exclude_domain: Ignore domain name
+        exclude_url: Ignore url path
       "sources/twitter_account":
         name: Screen Name
         description: Description
