--- a/src/doc/index.adoc
+++ b/src/doc/index.adoc
@@ -4,11 +4,11 @@
 
 include::ja/google_translate.adoc[]
 
-== newsdict.io : Correct the conntents from Internet.
+[caption="Correct the conntents from Internet."]
+image:https://raw.githubusercontent.com/newsdict/newsdict.io/master/logo.png[]
 
 image:https://img.shields.io/github/license/newsdict/newsdict.io[License]
 image:https://img.shields.io/github/v/release/newsdict/newsdict.io[Release]
-image:https://img.shields.io/github/v/release/newsdict/asciidoctor.live[asciiDoctor.live]
 image:https://img.shields.io/badge/rails-v6.0.2.2-orange[Rails]
 image:https://img.shields.io/badge/mongoid-7.1.0-yellow[Mongoid]
 image:https://img.shields.io/badge/rails_admin-2.0.1-yellow[RailsAdmin]
@@ -16,8 +16,6 @@ image:https://img.shields.io/badge/yard-0.9.24-yellow[Yard]
 
 newsdict.ioはフォロワーがシェアしている記事などのウェブコンテンツを
 クローリングしフィードとして閲覧できるようにします。Railsで作ってあるため拡張が容易です。
-
-image::/img/newsdictio_image.png[width=80%, align="center"]
 
 == Documents
 === Getting Start
