--- a/config/locales/rails_admin.ja.yml
+++ b/config/locales/rails_admin.ja.yml
@@ -1,8 +1,11 @@
 ja:
   admin:
     navigation:
+      sources: ソース元
       setting: 設定
-      global_setting: アプリ設定
+      portal_setting: ポータル面設定
+      crawling_setting: クローリング設定
+      admin_setting: 管理画面設定
       other_system_admin: その他の管理画面
       inquiries_management: 問い合わせ管理
     js:
