Added the function to watch the WebPage part.  @todo   - Communication of selected parts   - Building a WebSection model

--- a/config/locales/mongoid.en.yml
+++ b/config/locales/mongoid.en.yml
@@ -49,8 +49,9 @@ en:
       "filters/content": Content filters
       user: Admin User
       source: "Source"
-      "sources/url": "Web Sites"
-      "sources:twitter_account": Twitter account
+      "sources/web_section": Web Section
+      "sources/web_url": Web Url
+      "sources/twitter_account": Twitter account
       "config/mecab_dic": "Morphological element analysis Setting"
       "config/view": "HTML Setting"
       "configs/category": "Category Setting"
