--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -1,5 +1,9 @@
 en:
   admin:
+    edit_web_sections:
+      edit:
+        description: Select the part you want to watch from the screen on the left and click. Can be reselected with the reset button
+        links: Links of selectable area
     navigation:
       sources: Sources
       setting: Setting
