--- a/config/locales/mongoid.ja.yml
+++ b/config/locales/mongoid.ja.yml
@@ -76,8 +76,7 @@ ja:
       "filters/content": コンテンツのフィルター
       user: 管理ユーザ
       source: ソース
-      "sources/web_section": Web部分検知
-      "sources/web_url": Webサイト
+      "sources/web_site": Webサイト
       "sources/twitter_account": ツイッターアカウント
       "configs/mecab_dic": 形態要素解析
       "configs/view": HTML設定
