--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -112,3 +112,7 @@ en:
       x_years:
         one: 1 year
         other: "%{count} years"
+  recaptcha:
+    errors:
+      verification_failed: 'reCAPTCHA was incorrect, please try again.'
+      recaptcha_unreachable: 'reCAPTCHA verification server error, please try again.'
