--- a/app/themes/default/locales/mongoid.ja.yml
+++ b/app/themes/default/locales/mongoid.ja.yml
@@ -35,6 +35,7 @@ ja:
         created_at: 作成日時
         updated_at: 更新日時
       "filters/hidden_content":
+        exclude_title: 除外するTITLE
         exclude_url: 除外するURL
         created_at: 作成日時
         updated_at: 更新日時
