Supported asciidoctor-revealjs.

--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-image:https://raw.githubusercontent.com/newsdict/newsdict.io/master/logo.png[]
+# image:https://raw.githubusercontent.com/newsdict/newsdict.io/master/logo.png[]
 
 image:https://img.shields.io/github/v/release/newsdict/newsdict.io[Release]
 image:https://img.shields.io/github/license/newsdict/newsdict.io[License]
