Implemented to request removing form.

--- a/app/themes/default/locales/inquiries.en.yml
+++ b/app/themes/default/locales/inquiries.en.yml
@@ -3,6 +3,7 @@ en:
     show:
       your_name: Your Name
       your_mailaddress: Your Mailaddress
+      url: URL
       inquiry: Inquiry
       submit: Submit
     confirm:
