--- a/app/themes/default/locales/inquiries.ja.yml
+++ b/app/themes/default/locales/inquiries.ja.yml
@@ -3,6 +3,7 @@ ja:
     show:
       your_name: お名前
       your_mailaddress: メールアドレス
+      url: URL
       inquiry: お問い合わせ内容
       submit: 送信
     confirm:
